<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AiringTodayFragment">


    <android.support.v7.widget.RecyclerView
        android:id="@+id/tvShowsToday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        tools:listitem="@layout/list_item_tv_show"
        />

</FrameLayout>