...
                android:layout_weight="1"
                android:textColor="@android:color/white"
                tool:text="@string/sample_year"
                />

            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:src="@drawable/ic_favorite_holo"
                android:background="@color/backgroundColor"
                />
...
